--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -11,6 +11,26 @@
     height:400px;
 }
 
+.caro-icons {
+    background-color: black;
+    position: absolute;
+    top: 50%;
+    left: 36px;
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+}
+
+.caro-icons1 {
+    background-color: black;
+    position: absolute;
+    top: 50%;
+    right: 36px;
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+}
+
 .style{
     border-bottom: 2px solid blue;
 
