--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,77 +1,68 @@
 <footer class="footer-widget">
-  <div class="container-fluid">
+  <div class="container">
     <div class="data">
       <div class="row">
-        <div class="col-sm-4">
-            <a class="#" class="navbar navbar-brand logo-text">
-              <h2>Order Management</h2>
-            </a>
-            <p class="company-desc">Duis semper mauris vitae purus rhoncus suscipit. Nunc dictum dapibus tellus, at viverra risus 
-              pharetra id. Nulla facilisi. Ut mollis et augue non gravida.
-            </p>
-            <a href="#">
-              <i class="icon-social-twitter"></i>
-            </a>
-            <a href="#">
-                <i class="icon-social-twitter"></i>
-            </a>
-            <a href="#">
-                <i class="icon-social-twitter"></i>
-            </a>
+        <div class="col-md-3">
+          <a href="#" class="footer-link1">
+            <p class="company-name">Order Management</p>
+          </a>
+          <hr>
+          <p class="company-desc">Le Lorem Ipsum est simplement du faux texte employé dans
+            la composition et la mise en page avant impression.
+          </p>
+
         </div>
-        <div class="col-sm-4">
-          <h3 class="widget-title">Recent Posts</h3>
-          <div class="image-text">
-            <div>
-              <img src="assets/user.jpg">
-            </div>
-            <div class="text">
-              <p>Computer & Table</p>
-              <P class="footer-text">Macsof Technologies</P>
-            </div>
-          </div>
-          <div class="image-text">
-              <div>
-                <img src="assets/user.jpg">
-              </div>
-              <div class="text">
-                <p>Computer & Table</p>
-                <P class="footer-text">Macsof Technologies</P>
-              </div>
-            </div>
-            <div class="image-text">
-                <div>
-                  <img src="assets/user.jpg">
-                </div>
-                <div class="text">
-                  <p>Computer & Table</p>
-                  <P class="footer-text">Macsof Technologies</P>
-                </div>
-              </div>
+        <div class="col-md-3">
+          <p class="footer-info">Informations</p>
+          <hr>
+          <ul class="list">
+            <li>
+              <a href="#">Link1</a>
+            </li>
+            <li>
+              <a href="#">Link2</a>
+            </li>
+            <li>
+              <a href="#">Link3</a>
+            </li>
+            <li>
+              <a href="#">Link4</a>
+            </li>
+          </ul>
+
         </div>
-        <div class="col-sm-4">
-          <h3 class="widget-title">Latest Projects</h3>
-          <div class="row">
-            <div>
-              <img class="footer-image" src="assets/image.jpg">
-            </div>
-            <div>
-                <img class="footer-image" src="assets/image.jpg">
-            </div>
-            <div>
-                <img class="footer-image" src="assets/image.jpg">
-            </div>
-            <div>
-              <img class="footer-image" src="assets/image.jpg">
-            </div>
-            <div>
-                <img class="footer-image" src="assets/image.jpg">
-            </div>
-            <div>
-                <img class="footer-image" src="assets/image.jpg">
-            </div>
-            
-          </div>
+        <div class="col-md-3">
+          <p class="footer-links">Other Links</p>
+          <hr>
+          <ul class="list">
+            <li>
+              <a href="#">Link1</a>
+            </li>
+            <li>
+              <a href="#">Link2</a>
+            </li>
+            <li>
+              <a href="#">Link3</a>
+            </li>
+            <li>
+              <a href="#">Link4</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-3">
+          <p class="footer-contact">Contact</p>
+          <hr>
+          <ul class="list1">
+            <li>
+              <i class="fa fa-home mr-2"></i>Home
+            </li>
+            <li>
+              <i class="fa fa-envelope mr-2"></i>Ordermanagement@gmail.com
+            </li>
+            <li>
+              <i class="fa fa-phone mr-2"></i>+91 9966332255
+            </li>
+          </ul>
         </div>
       </div>
     </div>
