--- a/src/app/user-layout/profile/profile.component.html
+++ b/src/app/user-layout/profile/profile.component.html
@@ -52,16 +52,15 @@
         <div class="row">
           <div class="col-md-6">
             <div class="button1">
-              <button class="btn btn-primary" (click)="addNewDeliveryAddress()">Add New Address</button>
+              <button class="btn btn-primary" (click)="addNewDeliveryAddress()">+ Address</button>
             </div>
             <div class="typeofaddress" *ngIf="showhideuseraddressForm">
-              <form class="address" [formGroup]="addressForm" (ngSubmit)="createNewAddress()">
+              <form class="address" [formGroup]="addressForm" (ngSubmit)="address(addUpdateFormvalue)">
                 <div class="form-group">
                   <label>Select Type</label>
-                  <select class="form-control" name="Type" forsmControleName = "userType" (change)="addressTypeChange($event.target.value)">
+                  <select class="form-control" name="Type" forsmControleName = "userType" (change)="addressTypeChange($event.target.value)" >
                     <option value="type" hidden >Select</option>
-                    <option value="1" *ngFor="let type of addressTypes">{{type.type_name}}</option>
-                   
+                    <option value="{{userType}}" *ngFor="let userType of addressTypes">{{userType.type_name}}</option>
                   </select>
                 </div>
                 <div class="form-group">
@@ -71,6 +70,9 @@
                 </div>
                 <div class="submit-btn">
                   <button class="btn btn-md btn-primary" type="submit">Submit</button>
+                  <div *ngIf="addressFormCancel">
+                  <button class="btn btn-md btn-danger">Cancel</button>
+                 </div>
                 </div>
               </form>
             </div>
@@ -82,13 +84,13 @@
             <div class="col-md-12 profile-address" *ngFor = "let address of addressList">
               <p class="address-type">{{address.type_name}}</p>
               <div class="edit-buttons">
-                <button type="button" class="btn btn-sm btn-success" name="edit" (click) = 'userUpdateAddress(address.address_id,address.type_name,address.address )' ><i class="fa fa-pencil"></i></button>
-                <button type="button" class="btn btn-sm btn-danger" name="delete" (click) = 'userDeleteAddress(address.address_id)'><i class="fa fa-trash"></i></button>
+                <button type="button" class="btn btn-sm btn-success" name="edit" (click) = 'updateDeliveryAddress(address)' ><i class="fa fa-pencil"></i></button>
+                <button type="button" class="btn btn-sm btn-danger" name="delete" (click) = 'deleteDeliveryAddress(address.address_id)'><i class="fa fa-trash"></i></button>
               </div>
-              <p>{{address.address}}</p>
+              <div>
+                <p>{{address.address}}</p>
+              </div>
             </div>
-
-           
           </div>
         </div>
       </div>
