Design changes in header, footer, user-layout and sidebar components

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="data">
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-4 footer-content">
           <a href="#" class="footer-link1">
             <p class="company-name">Order Management</p>
           </a>
@@ -12,7 +12,7 @@
           </p>
 
         </div>
-        <div class="col-md-3">
+        <!-- <div class="col-md-3">
           <p class="footer-info">Informations</p>
           <hr>
           <ul class="list">
@@ -30,11 +30,11 @@
             </li>
           </ul>
 
-        </div>
-        <div class="col-md-3">
-          <p class="footer-links">Other Links</p>
+        </div> -->
+        <div class="col-md-4 footer-content">
+          <a class="footer-links">Other Links</a>
           <hr>
-          <ul class="list">
+          <ul class="list1">
             <li>
               <a href="#">Link1</a>
             </li>
@@ -49,8 +49,8 @@
             </li>
           </ul>
         </div>
-        <div class="col-md-3">
-          <p class="footer-contact">Contact</p>
+        <div class="col-md-4 footer-content">
+          <a class="footer-contact">Contact</a>
           <hr>
           <ul class="list1">
             <li>
