--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -44,10 +44,7 @@
           >
             USER
           </a>
-          <div
-            class="dropdown-menu dropdown-menu-left drop1"
-            aria-labelledby="dropdown_target"
-          >
+          <div class="dropdown-menu dropdown-menu-left drop1" aria-labelledby="dropdown_target">
             <div class="image1">
               <div>
                 <img src="assets/user.jpg" alt="image" class="user-image1" />
