--- a/src/app/user-layout/profile/profile.component.scss
+++ b/src/app/user-layout/profile/profile.component.scss
@@ -26,6 +26,10 @@
 
   // font-size: x-large;
 }
+.profile-form {
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.12);
+  padding: 20px;
+}
 
 .button {
   position: absolute;
@@ -38,7 +42,12 @@
   text-align: center;
   /*margin-left: 390px;*/
 }
-
+.margin {
+  margin: 14px;
+}
+.margin1 {
+  margin: 35px 0px 0px 0px;
+}
 .address-text p {
   margin-top: 25px;
   font-size: 20px;
@@ -47,6 +56,8 @@
 .btn {
   color: #fff;
   height: 37px;
+  border-radius: 25px;
+  margin: 2px;
   // background-color: #0062cc;
   // border-color: #005cbf;
   // border-radius: 20px;
@@ -59,10 +70,14 @@
   border: 1px solid #e9ecef;
   .address-type {
     border: solid 1px #e6e2e2;
-    border-radius: 20%;
+    border-radius: 25px;
     display: initial;
     padding: 5px;
-    font-size: 12px;
+    font-size: 13px;
+    background-color: #d0d0cf;
+    color: #fff;
+
+font-weight: 633;
   }
   .edit-buttons {
     float: right;
