Design changes in header,footer nd my-orders

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="data">
       <div class="row">
         <div class="col-md-4 footer-content">
-          <a href="#" class="footer-link1">
+          <a href="#" class="footer-links">
             <p class="company-name">Order Management</p>
           </a>
           <hr>
@@ -12,25 +12,6 @@
           </p>
 
         </div>
-        <!-- <div class="col-md-3">
-          <p class="footer-info">Informations</p>
-          <hr>
-          <ul class="list">
-            <li>
-              <a href="#">Link1</a>
-            </li>
-            <li>
-              <a href="#">Link2</a>
-            </li>
-            <li>
-              <a href="#">Link3</a>
-            </li>
-            <li>
-              <a href="#">Link4</a>
-            </li>
-          </ul>
-
-        </div> -->
         <div class="col-md-4 footer-content">
           <a class="footer-links">Other Links</a>
           <hr>
@@ -50,7 +31,7 @@
           </ul>
         </div>
         <div class="col-md-4 footer-content">
-          <a class="footer-contact">Contact</a>
+          <a class="footer-links">Contact</a>
           <hr>
           <ul class="list1">
             <li>
