--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,7 +1,7 @@
 .footer-widget {
     font-family: lato,Roboto,"Helvetica Neue",sans-serif;
-    background-color:#1f2a2c;
-    color:#ffffff;
+    background-color:#f7f6f2;
+    color:#000;
     text-align: justify;
 }
 
@@ -11,39 +11,28 @@
         text-align: center;
     }
 }
-
-.footer-link1 {
-    text-decoration: none;
-}
-
 .company-name {
     font-size: 24px;
 }
-
-.footer-info {
-    font-size:24px;
-}
-
 .footer-links {
     font-size:24px;
-}
-
-.footer-contact {
-    font-size:24px;
+    text-decoration: none;
+    font-weight: 600;
 }
 
 .footer-widget a {
-    color:#ffffff;
+    color:#000;
+    &:hover {
+        color: #82ae46;
+    }
 }
 
 .list li {
     list-style-type: none;
     margin-bottom: 8px;
-
-}
-
-.list li a {
-    text-decoration: none;
+    a {
+        text-decoration: none;
+    }
 }
 
 .list1 {
@@ -59,37 +48,3 @@
     text-decoration: none;
 }
 
-// .company-desc {
-//     margin-top:22px;
-// }
-
-// .image-text img {
-//     height:70px;
-//     width:67px;
-// }
-
-// .image-text {
-//     display: flex;
-//     margin-bottom:20px;
-// }
-
-// .image-text p {
-//     margin:0px;
-// }
-
-// .text{
-//     padding: 7px;
-//     margin-left: 17px;
-// }
-
-// .footer-text {
-//     font-size:12px;
-//     text-align:center;
-// }
-
-// .footer-image {
-//     float:left;
-//     width:80px;
-//     height:80px;
-//     margin:17px;
-// }
