--- a/src/app/user-layout/my-orders/my-orders.component.html
+++ b/src/app/user-layout/my-orders/my-orders.component.html
@@ -3,91 +3,111 @@
         <div class="col-12">
             <!-- <div class="card"> -->
             <!-- <div class="card-body p-0"> -->
-            <div class="row pb-5 p-5">
-                <div class="col-md-5">
-                    <p class="font-weight-bold mb-4">User Details</p>
-                    <p class="mb-1"><span class="text-muted">Name: </span> sai</p>
-                    <p class="mb-1"><span class="text-muted">Email: </span> sai@gmail.com</p>
-                    <p class="mb-1"><span class="text-muted">Phone No: </span> 9966332211</p>
-                </div>
+            
 
-                <div class="col-md-4">
-                    <p class="font-weight-bold mb-4">Payment Details</p>
-                    <p class="mb-1"><span class="text-muted">VAT: </span> 1425782</p>
-                    <p class="mb-1"><span class="text-muted">VAT ID: </span> 10253642</p>
-                    <p class="mb-1"><span class="text-muted">Payment Type: </span> Root</p>
-                    <p class="mb-1"><span class="text-muted">Name: </span> John Doe</p>
-                </div>
-
-                <div class="col-md-3">
-                    <p class="font-weight-bold mb-4">Payment Details</p>
-                    <p class="mb-1"><span class="text-muted">VAT: </span> 1425782</p>
-                    <p class="mb-1"><span class="text-muted">VAT ID: </span> 10253642</p>
-                    <p class="mb-1"><span class="text-muted">Payment Type: </span> Root</p>
-                    <p class="mb-1"><span class="text-muted">Name: </span> John Doe</p>
+            <!-- <div>
+                <button class="btn btn-md btn-primary" (click)="showTable();">Click me</button>
+            </div> -->
+            <div class="accordion" id="expansion-panel">
+                <div class="card" id="panel-heading">
+                    <div class="card-header">
+                        <!-- <div> -->
+                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                <p class="pull-left">OrderId: 518</p>
+                                <p class="pull-right">Date: 03/11/2019</p>
+                            </button>     
+                        <!-- </div>     -->
+                    </div>
+                    <div id="collapseOne" class="collapse show" aria-labelledby="panel-heading" data-parent="#expansion-panel">
+                        <div class="card-body">
+                            <div class="row pb-5 p-5">
+                                        <div class="col-md-5">
+                                            <p class="font-weight-bold mb-4">User Details</p>
+                                            <p class="mb-1"><span class="text-muted">Name: </span> sai</p>
+                                            <p class="mb-1"><span class="text-muted">Email: </span> sai@gmail.com</p>
+                                            <p class="mb-1"><span class="text-muted">Phone No: </span> 9966332211</p>
+                                        </div>
+                        
+                                        <div class="col-md-4">
+                                            <p class="font-weight-bold mb-4">Payment Details</p>
+                                            <p class="mb-1"><span class="text-muted">VAT: </span> 1425782</p>
+                                            <p class="mb-1"><span class="text-muted">VAT ID: </span> 10253642</p>
+                                            <p class="mb-1"><span class="text-muted">Payment Type: </span> Root</p>
+                                            <p class="mb-1"><span class="text-muted">Name: </span> John Doe</p>
+                                        </div>
+                        
+                                        <div class="col-md-3">
+                                            <p class="font-weight-bold mb-4">Payment Details</p>
+                                            <p class="mb-1"><span class="text-muted">VAT: </span> 1425782</p>
+                                            <p class="mb-1"><span class="text-muted">VAT ID: </span> 10253642</p>
+                                            <p class="mb-1"><span class="text-muted">Payment Type: </span> Root</p>
+                                            <p class="mb-1"><span class="text-muted">Name: </span> John Doe</p>
+                                        </div>
+                            </div>
+                            <div class="row p-5">
+                                <div class="col-md-12">
+                                    <table class="table">
+                                                    <thead>
+                                                        <tr>
+                                                            <th class="border-0 text-uppercase small font-weight-bold">IMAGE</th>
+                                                            <th class="border-0 text-uppercase small font-weight-bold">Description</th>
+                                                            <th class="border-0 text-uppercase small font-weight-bold">Price</th>
+                                                            <th class="border-0 text-uppercase small font-weight-bold">Quantity</th>
+                                                            <th class="border-0 text-uppercase small font-weight-bold">Total</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        <tr>
+                                                            <td><img src="assets/cement.jpg" alt="image"></td>
+                                                            <td>company1</td>
+                                                            <td><span>&#8360;</span>&nbsp;150.00</td>
+                                                            <td>2</td>
+                                                            <td><span>&#8360;</span>&nbsp;450.00</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td><img src="assets/cement.jpg" alt="image"></td>
+                                                            <td>Maha Gold</td>
+                                                            <td><span>&#8360;</span>&nbsp;250.00</td>
+                                                            <td>2</td>
+                                                            <td><span>&#8360;</span>&nbsp;750.00</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td><img src="assets/cement.jpg" alt="image"></td>
+                                                            <td>Maha Gold</td>
+                                                            <td>
+                                                                <div>&nbsp;10mm<span>&#8211;</span>&nbsp;
+                                                                    <span>&#8377;&nbsp;</span>200&nbsp;</div>
+                                                                <div>&nbsp;10mm<span>&#8211;</span>&nbsp;
+                                                                    <span>&#8377;&nbsp;</span>200&nbsp;</div>
+                                                            </td>
+                                                            <td>
+                                                                <div>2</div>
+                                                                <div>2</div>
+                                                            </td>
+                                                            <td>
+                                                                <div><span>&#8360;</span>&nbsp;450.00</div>
+                                                                <div><span>&#8360;</span>&nbsp;450.00</div>
+                                                            </td>
+                                                        </tr>
+                                                    </tbody>
+                                    </table>
+                                    <hr>
+                                    <div class="total-value">
+                                        <p>Total Amount : <span>&#8360;</span>&nbsp;750.00</p>
+                                    </div>
+                                    <div class="total-value">
+                                        <p>Extra Charges : <span>&#8360;</span>&nbsp;150.00</p>
+                                    </div>
+                                    <div class="total-value">
+                                        <p>Grand Total : <span>&#8360;</span>&nbsp;750.00</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-
-            <div class="row p-5">
-                <div class="col-md-12">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th class="border-0 text-uppercase small font-weight-bold">IMAGE</th>
-                                <th class="border-0 text-uppercase small font-weight-bold">Description</th>
-                                <th class="border-0 text-uppercase small font-weight-bold">Price</th>
-                                <th class="border-0 text-uppercase small font-weight-bold">Quantity</th>
-                                <th class="border-0 text-uppercase small font-weight-bold">Total</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td><img src="assets/cement.jpg" alt="image"></td>
-                                <td>company1</td>
-                                <td><span>&#8360;</span>&nbsp;150.00</td>
-                                <td>2</td>
-                                <td><span>&#8360;</span>&nbsp;450.00</td>
-                            </tr>
-                            <tr>
-                                <td><img src="assets/cement.jpg" alt="image"></td>
-                                <td>Maha Gold</td>
-                                <td><span>&#8360;</span>&nbsp;250.00</td>
-                                <td>2</td>
-                                <td><span>&#8360;</span>&nbsp;750.00</td>
-                            </tr>
-                            <tr>
-                                <td><img src="assets/cement.jpg" alt="image"></td>
-                                <td>Maha Gold</td>
-                                <td>
-                                    <div>&nbsp;10mm<span>&#8211;</span>&nbsp;
-                                        <span>&#8377;&nbsp;</span>200&nbsp;</div>
-                                    <div>&nbsp;10mm<span>&#8211;</span>&nbsp;
-                                        <span>&#8377;&nbsp;</span>200&nbsp;</div>
-                                </td>
-                                <td>
-                                    <div>2</div>
-                                    <div>2</div>
-                                </td>
-                                <td>
-                                    <div><span>&#8360;</span>&nbsp;450.00</div>
-                                    <div><span>&#8360;</span>&nbsp;450.00</div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <hr>
-                    <div class="total-value">
-                        <p>Total Amount : <span>&#8360;</span>&nbsp;750.00</p>
-                    </div>
-                    <div class="total-value">
-                        <p>Extra Charges : <span>&#8360;</span>&nbsp;150.00</p>
-                    </div>
-                    <div class="total-value">
-                        <p>Grand Total : <span>&#8360;</span>&nbsp;750.00</p>
-                    </div>
-                </div>
-            </div>
-
+            
             <!-- <div class="d-flex flex-row-reverse bg-dark text-white p-4">
                         <div class="py-3 px-5 text-right">
                             <div class="mb-2">Grand Total</div>
