--- a/src/app/user-layout/my-orders/my-orders.component.scss
+++ b/src/app/user-layout/my-orders/my-orders.component.scss
@@ -32,3 +32,18 @@ img {
     font-size: 20px;
     margin-right: 51px;
 }
+/*--------Expansion panel styles starts ---------*/
+
+.card {
+    margin-bottom: 20px;
+    .card-header {
+        button {
+            width: 100%;
+            p {
+                font-size: 17px;
+                font-weight: 600;
+                color: #000;
+            }
+        }
+    }
+}
