--- a/src/app/user-layout/my-orders/my-orders.component.html
+++ b/src/app/user-layout/my-orders/my-orders.component.html
@@ -20,8 +20,15 @@
                     </div>
                     <div id="collapseOne" class="collapse show" aria-labelledby="panel-heading" data-parent="#expansion-panel">
                         <div class="card-body">
-                            <div class="row pb-5 p-5">
-                                        <div class="col-md-5">
+                            <div class="row">
+                                        <div class="col-md-4 details">
+                                            <p class="font-weight-bold mb-4">Order Details</p>
+                                            <p class="mb-1"><span class="text-muted">OrderId: </span> 518</p>
+                                            <p class="mb-1"><span class="text-muted">OrderDate: </span> 03/11/2019</p>
+                                            <p class="mb-1"><span class="text-muted">Order Status: </span> Inprogress</p>
+                                        </div>
+                        
+                                        <div class="col-md-4">
                                             <p class="font-weight-bold mb-4">User Details</p>
                                             <p class="mb-1"><span class="text-muted">Name: </span> sai</p>
                                             <p class="mb-1"><span class="text-muted">Email: </span> sai@gmail.com</p>
@@ -35,16 +42,8 @@
                                             <p class="mb-1"><span class="text-muted">Payment Type: </span> Root</p>
                                             <p class="mb-1"><span class="text-muted">Name: </span> John Doe</p>
                                         </div>
-                        
-                                        <div class="col-md-3">
-                                            <p class="font-weight-bold mb-4">Payment Details</p>
-                                            <p class="mb-1"><span class="text-muted">VAT: </span> 1425782</p>
-                                            <p class="mb-1"><span class="text-muted">VAT ID: </span> 10253642</p>
-                                            <p class="mb-1"><span class="text-muted">Payment Type: </span> Root</p>
-                                            <p class="mb-1"><span class="text-muted">Name: </span> John Doe</p>
-                                        </div>
                             </div>
-                            <div class="row p-5">
+                            <div class="row">
                                 <div class="col-md-12">
                                     <table class="table">
                                                     <thead>
@@ -98,6 +97,7 @@
                                     <div class="total-value">
                                         <p>Extra Charges : <span>&#8360;</span>&nbsp;150.00</p>
                                     </div>
+                                    <hr class="hr-line">
                                     <div class="total-value">
                                         <p>Grand Total : <span>&#8360;</span>&nbsp;750.00</p>
                                     </div>
