--- a/src/app/user-layout/profile/profile.component.scss
+++ b/src/app/user-layout/profile/profile.component.scss
@@ -40,6 +40,10 @@
   margin-top: 22px;
   margin-bottom: 20px;
   text-align: center;
+  button {
+    background-color: #82ae46;
+    border: #82ae46;
+  }
   /*margin-left: 390px;*/
 }
 .margin {
