--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid header-widget">
-  <nav class="navbar navbar-expand-md">
+  <nav class="navbar navbar-expand-md navbar-fixed-top">
     <a class="#" class="navbar navbar-brand logo-text">
       <h2>Order Management</h2>
     </a>
