--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -22,9 +22,9 @@
   // text-transform: uppercase;
   font-weight: bold;
   font-size: 16px;
-  color: #000;
+  color: #82ae46;
   &:hover {
-    color: #82ae46;
+    color: #000;
   }
 }
 
@@ -93,10 +93,10 @@ hr {
   text-align: center;
   button {
     border-radius: 25px;
-    &:hover {
+    // &:hover {
       background-color: #82ae46;
       border: #82ae46; 
-    }  
+    // }  
   }
 }
 .dd {
