--- a/src/app/user-layout/profile/profile.component.scss
+++ b/src/app/user-layout/profile/profile.component.scss
@@ -3,7 +3,7 @@
   button {
     border-radius: 30px;
   }
-}
+} 
 .profile {
   margin-top: 60px;
   margin-bottom: 40px;
@@ -78,10 +78,9 @@
     display: initial;
     padding: 5px;
     font-size: 13px;
-    background-color: #d0d0cf;
+    background-color: #82ae46;
     color: #fff;
-
-font-weight: 633;
+    font-weight: 633;
   }
   .edit-buttons {
     float: right;
