--- a/src/app/user-layout/sidebar/sidebar.component.scss
+++ b/src/app/user-layout/sidebar/sidebar.component.scss
@@ -24,10 +24,10 @@
   }
 }
 .isActive {
-  border-left: 3px solid #3c8dbc;
+  border-left: 3px solid #82ae46;
   background: #1e282c;
   a {
-    color: #82ae46 !important;
+    color: #fff !important;
   }
 }
 .fa-user:before {
