--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,6 +1,6 @@
 .footer-widget {
     font-family: lato,Roboto,"Helvetica Neue",sans-serif;
-    background-color:#f7f6f2;
+    background-color:#82ae46;
     color:#000;
     text-align: justify;
 }
@@ -23,7 +23,8 @@
         font-size:24px;
         text-decoration: none;
         font-weight: 600;
-        color: #82ae46 !important;
+        color: #fff !important;
+        text-shadow: 1px 1px #000;
         &:hover {
             color: #000 !important;
         }
@@ -31,9 +32,6 @@
 }
 .footer-widget a {
     color: #000;
-    &:hover {
-        color: #82ae46;
-    }
 }
 
 .list li {
